--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines":{
+    "node":"22.18.0"
+  },
+
   "name": "staynest",
   "version": "1.0.0",
   "description": "",
@@ -12,7 +16,10 @@
   "type": "commonjs",
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
@@ -20,6 +27,8 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
